GNOME Bugzilla – Bug 726365
ges-smart-adder.c:47:57: error: expected ')' before ';' token
Last modified: 2014-03-15 12:12:37 UTC
Created attachment 271942 [details] [review] Patch ges-smart-adder.c: In function 'ges_smart_adder_new': ges-smart-adder.c:47:57: error: expected ')' before ';' token #define DEFAULT_CAPS "audio/x-raw,format=(string)S32BE;"; ^ ges-smart-adder.c:208:60: note: in expansion of macro 'DEFAULT_CAPS' g_object_set (self->adder, "caps", gst_caps_from_string (DEFAULT_CAPS), NULL);
commit 4dbdac99ed956ec070cd1e940db2ad0c344218ca Author: Andreas Schwab <schwab@linux-m68k.org> Date: Fri Mar 14 19:59:27 2014 +0100 ges: remove extra semicolon https://bugzilla.gnome.org/show_bug.cgi?id=726365