ges: remove extra semicolon

https://bugzilla.gnome.org/show_bug.cgi?id=726365